{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 557,
  "lineage": "5a1a466a-c179-b94d-a863-a86eb8da80d0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:security-group/sg-0ff561ac98263bf74",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0ff561ac98263bf74",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-095365bfaa0a0a10c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:security-group/sg-0f180d08deee366a0",
            "description": "Allow PostgreSQL \u0026 SSH access",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "allow_ssh_postgresql"
                ]
              }
            ],
            "id": "sg-0f180d08deee366a0",
            "name": "allow_postgresql_ingress",
            "tags": {
              "Name": "allow_ssh_postgresql"
            },
            "timeouts": null,
            "vpc_id": "vpc-095365bfaa0a0a10c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ec2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:subnet/subnet-0f68870f46bb2ee95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.69.22.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f68870f46bb2ee95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242794709741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "plgrnd-j-a",
              "ManagedBy": "Terraform",
              "Name": "plgrnd-j-a-main-private-eu-central-1c",
              "Repo": "https://gitlab.thedock.cloud/platform/aws-infrastructure",
              "access-environment": "plgrnd-j-a"
            },
            "vpc_id": "vpc-095365bfaa0a0a10c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds_subnet_array",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-023d2e9c4326fd9fc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:subnet/subnet-023d2e9c4326fd9fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.69.31.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023d2e9c4326fd9fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242794709741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "plgrnd-j-a",
              "ManagedBy": "Terraform",
              "Name": "plgrnd-j-a-main-db-eu-central-1b",
              "Repo": "https://gitlab.thedock.cloud/platform/aws-infrastructure",
              "access-environment": "plgrnd-j-a"
            },
            "vpc_id": "vpc-095365bfaa0a0a10c"
          }
        },
        {
          "index_key": "subnet-0b1fbaacca6e472e5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:subnet/subnet-0b1fbaacca6e472e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.69.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1fbaacca6e472e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242794709741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "plgrnd-j-a",
              "ManagedBy": "Terraform",
              "Name": "plgrnd-j-a-main-db-eu-central-1a",
              "Repo": "https://gitlab.thedock.cloud/platform/aws-infrastructure",
              "access-environment": "plgrnd-j-a"
            },
            "vpc_id": "vpc-095365bfaa0a0a10c"
          }
        },
        {
          "index_key": "subnet-0ec7b2e414433bc88",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:subnet/subnet-0ec7b2e414433bc88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.69.32.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec7b2e414433bc88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242794709741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "plgrnd-j-a",
              "ManagedBy": "Terraform",
              "Name": "plgrnd-j-a-main-db-eu-central-1c",
              "Repo": "https://gitlab.thedock.cloud/platform/aws-infrastructure",
              "access-environment": "plgrnd-j-a"
            },
            "vpc_id": "vpc-095365bfaa0a0a10c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:vpc/vpc-095365bfaa0a0a10c",
            "cidr_block": "10.69.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02bc6182a8164da2a",
                "cidr_block": "10.69.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dbe21abf4680cfd1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "plgrnd-j-a-main"
                ]
              }
            ],
            "id": "vpc-095365bfaa0a0a10c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053ff295bc3092467",
            "owner_id": "242794709741",
            "tags": {
              "Environment": "plgrnd-j-a",
              "ManagedBy": "Terraform",
              "Name": "plgrnd-j-a-main",
              "Repo": "https://gitlab.thedock.cloud/platform/aws-infrastructure",
              "access-environment": "plgrnd-j-a"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d24108be0a614c",
            "arn": "arn:aws:ec2:eu-central-1:242794709741:instance/i-0c52bc27a726e0ed2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c52bc27a726e0ed2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033ce86ef7e0bd3a4",
            "private_dns": "ip-10-69-22-21.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.69.22.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:242794709741:key/f8aa0569-99f3-41ae-bad3-69c959b844f7",
                "throughput": 0,
                "volume_id": "vol-003fc68a38bb4230d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f68870f46bb2ee95",
            "tags": {
              "Environment": "Backup",
              "Name": "psqlclient",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Backup",
              "Name": "psqlclient",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f180d08deee366a0",
              "sg-0ff561ac98263bf74"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.pgsql_allow",
            "data.aws_security_group.default",
            "data.aws_security_group.selected_sg",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pgsql_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:security-group/sg-0f180d08deee366a0",
            "description": "Allow PostgreSQL \u0026 SSH access",
            "egress": [],
            "id": "sg-0f180d08deee366a0",
            "ingress": [],
            "name": "allow_postgresql_ingress",
            "name_prefix": "",
            "owner_id": "242794709741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_postgresql"
            },
            "tags_all": {
              "Name": "allow_ssh_postgresql"
            },
            "timeouts": null,
            "vpc_id": "vpc-095365bfaa0a0a10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.69.22.0/24",
              "10.69.31.0/24",
              "10.69.30.0/24",
              "10.69.32.0/24"
            ],
            "description": "ssh access",
            "from_port": 22,
            "id": "sgrule-182191970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f180d08deee366a0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pgsql_allow",
            "data.aws_security_group.selected_sg",
            "data.aws_subnet.ec2_subnet",
            "data.aws_subnet.rds_subnet_array",
            "data.aws_subnets.rds_subnets",
            "data.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.69.22.0/24",
              "10.69.31.0/24",
              "10.69.30.0/24",
              "10.69.32.0/24"
            ],
            "description": "postgresql access",
            "from_port": 5432,
            "id": "sgrule-401729489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f180d08deee366a0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pgsql_allow",
            "data.aws_security_group.selected_sg",
            "data.aws_subnet.ec2_subnet",
            "data.aws_subnet.rds_subnet_array",
            "data.aws_subnets.rds_subnets",
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.69.22.0/24",
              "10.69.31.0/24",
              "10.69.30.0/24",
              "10.69.32.0/24"
            ],
            "description": "ssh access",
            "from_port": 22,
            "id": "sgrule-1147804925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f180d08deee366a0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pgsql_allow",
            "data.aws_security_group.selected_sg",
            "data.aws_subnet.ec2_subnet",
            "data.aws_subnet.rds_subnet_array",
            "data.aws_subnets.rds_subnets",
            "data.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.69.22.0/24",
              "10.69.31.0/24",
              "10.69.30.0/24",
              "10.69.32.0/24"
            ],
            "description": "postgresql access",
            "from_port": 5432,
            "id": "sgrule-371184427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f180d08deee366a0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pgsql_allow",
            "data.aws_security_group.selected_sg",
            "data.aws_subnet.ec2_subnet",
            "data.aws_subnet.rds_subnet_array",
            "data.aws_subnets.rds_subnets",
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:242794709741:security-group/sg-09ee0fbcf99613c64",
            "description": "Control traffic to/from RDS Aurora banking-int",
            "egress": [],
            "id": "sg-09ee0fbcf99613c64",
            "ingress": [],
            "name": "banking-int-20231110145746991400000001",
            "name_prefix": "banking-int-",
            "owner_id": "242794709741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "banking-int",
              "Name": "banking-int",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "banking-int",
              "Name": "banking-int",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095365bfaa0a0a10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}